Fixed some style issues that were preventing steps/components from sizing/scrolling correctly on small screens

--- a/src/main/webapp/wise5/themes/default/style/base/_presets.scss
+++ b/src/main/webapp/wise5/themes/default/style/base/_presets.scss
@@ -273,6 +273,9 @@ md-icon, .md-button:not([disabled]) {
   &.warn {
     color: color('warn') !important;
   }
+  &.info {
+    color: color('info') !important;
+  }
   &.accent-1 {
     color: color('accent-1') !important;
   }
