--- a/src/main/webapp/wise5/themes/default/style/layouts/_l-default.scss
+++ b/src/main/webapp/wise5/themes/default/style/layouts/_l-default.scss
@@ -4,11 +4,12 @@
 .l-constrained {
   margin-left: auto;
   margin-right: auto;
-  max-width: $layout-breakpoint-md;
+  max-width: 100%;
   position: relative;
 
   @media (min-width: $layout-breakpoint-xs) {
       width: 100%;
+      max-width: $layout-breakpoint-md;
   }
 }
 
